--- a/LoginPage/MainWindow.xaml
+++ b/LoginPage/MainWindow.xaml
@@ -18,12 +18,15 @@
             Height="208"
             Background="LightBlue"
             BorderThickness="1" 
-            CornerRadius="0,80,0,80" Margin="78,26,79,17" >
-                    <Grid Margin="-70,-10,20,20">
+            CornerRadius="0,80,0,80" Margin="88,31,89,22" >
+                    <Grid Margin="-70,18, 20,20">
+                        <Label x:Name="Name" HorizontalAlignment="Left" Height="30" Margin="94,25,0,0" Content="Name:" VerticalAlignment="Top" Width="80" BorderThickness="0"  FontFamily="Bebas Kai" FontSize="18.667" Background="{x:Null}"/>
+                        <TextBox x:Name="NameField" HorizontalAlignment="Left" Height="23" Margin="228,25,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="150" BorderThickness="1" FontSize="16"/>
+
                         <Label x:Name="UserName" HorizontalAlignment="Left" Height="30" Margin="94,55,0,0" Content="UserName:" VerticalAlignment="Top" Width="80" BorderThickness="0"  FontFamily="Bebas Kai" FontSize="18.667" Background="{x:Null}"/>
                         <TextBox x:Name="UserNameField" HorizontalAlignment="Left" Height="23" Margin="228,57,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="150" BorderThickness="1" FontSize="16"/>
 
-                        <Label x:Name="Password" HorizontalAlignment="Left" Height="30" Margin="94,84,0,0" Content="Password:" VerticalAlignment="Top" Width="80" BorderThickness="0"  FontFamily="Bebas Kai" FontSize="18.667" Background="{x:Null}"/>
+                        <Label x:Name="Password" HorizontalAlignment="Left" Height="30" Margin="94,87,0,0" Content="Password:" VerticalAlignment="Top" Width="80" BorderThickness="0"  FontFamily="Bebas Kai" FontSize="18.667" Background="{x:Null}"/>
                         <PasswordBox x:Name="PasswordField" HorizontalAlignment="Left" Height="23" Margin="228,88,0,0" VerticalAlignment="Top" Width="150" BorderThickness="1" FontSize="16"/>
 
                         <Label x:Name="PasswordVerify" HorizontalAlignment="Left" Height="30" Margin="94,117,0,0"  Content="ReEnter Password:" VerticalAlignment="Top" Width="135" BorderThickness="0" FontFamily="Bebas Kai" FontSize="18.667" Background="{x:Null}"/>
