--- a/LoginPage/MainWindow.xaml
+++ b/LoginPage/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LoginPage"
         mc:Ignorable="d"
-        Title="MainWindow" Height="700" Width="1250" >
+        Title="MainWindow" Height="700" Width="1250" WindowState="Maximized">
     <Viewbox>
 
         <Grid>
@@ -19,7 +19,7 @@
             Background="LightBlue"
             BorderThickness="1" 
             CornerRadius="0,80,0,80" Margin="88,31,89,22" >
-                    <Grid Margin="-70,18, 20,20">
+                    <Grid Margin="-70, 10, 20,20">
                         <Label x:Name="Name" HorizontalAlignment="Left" Height="30" Margin="94,25,0,0" Content="Name:" VerticalAlignment="Top" Width="80" BorderThickness="0"  FontFamily="Bebas Kai" FontSize="18.667" Background="{x:Null}"/>
                         <TextBox x:Name="NameField" HorizontalAlignment="Left" Height="23" Margin="228,25,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="150" BorderThickness="1" FontSize="16"/>
 
@@ -32,7 +32,7 @@
                         <Label x:Name="PasswordVerify" HorizontalAlignment="Left" Height="30" Margin="94,117,0,0"  Content="ReEnter Password:" VerticalAlignment="Top" Width="135" BorderThickness="0" FontFamily="Bebas Kai" FontSize="18.667" Background="{x:Null}"/>
                         <PasswordBox x:Name="PasswordFieldVerify" HorizontalAlignment="Left" Height="23" Margin="228,121,0,0" VerticalAlignment="Top" Width="150" BorderThickness="1" FontSize="16"/>
 
-                        <Button x:Name="button" Content="Register" HorizontalAlignment="Left" Margin="214,169,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="button_Click" Background="#FFF1F3FD" FontFamily="Bebas Kai" FontSize="16"/>
+                        <Button x:Name="button" Content="Register" HorizontalAlignment="Left" Margin="192,158,0,-7" VerticalAlignment="Top" Width="75" Height="25" Click="button_Click" Background="#FFF1F3FD" FontFamily="Bebas Kai" FontSize="16"/>
                         </Grid>
                 </Border>
             </Grid>
