--- a/LoginPage/MainWindow.xaml
+++ b/LoginPage/MainWindow.xaml
@@ -14,11 +14,10 @@
             <Grid x:Name="RegistrationForm" Margin="6,40,-6,10">
                 <Border
             MinWidth="150"
-            Width="340"
             Height="208"
             Background="LightBlue"
             BorderThickness="1" 
-            CornerRadius="0,80,0,80" Margin="88,31,89,22" >
+            CornerRadius="0,80,0,80" Margin="39,10,39,43" >
                     <Grid Margin="-70, 10, 20,20">
                         <Label x:Name="Name" HorizontalAlignment="Left" Height="30" Margin="94,25,0,0" Content="Name:" VerticalAlignment="Top" Width="80" BorderThickness="0"  FontFamily="Bebas Kai" FontSize="18.667" Background="{x:Null}"/>
                         <TextBox x:Name="NameField" HorizontalAlignment="Left" Height="23" Margin="228,25,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="150" BorderThickness="1" FontSize="16"/>
@@ -33,8 +32,12 @@
                         <PasswordBox x:Name="PasswordFieldVerify" HorizontalAlignment="Left" Height="23" Margin="228,121,0,0" VerticalAlignment="Top" Width="150" BorderThickness="1" FontSize="16"/>
 
                         <Button x:Name="button" Content="Register" HorizontalAlignment="Left" Margin="192,158,0,-7" VerticalAlignment="Top" Width="75" Height="25" Click="button_Click" Background="#FFF1F3FD" FontFamily="Bebas Kai" FontSize="16"/>
-                        </Grid>
+                    </Grid>
                 </Border>
+                <Label x:Name="UserNameError" HorizontalAlignment="Left" Height="30" Margin="353,76,0,0" Content="*INVALID USERNAME" VerticalAlignment="Top" Width="98" BorderThickness="0"  FontFamily="Bebas Kai" FontSize="14" Foreground="Red" Visibility="Hidden" Background="{x:Null}"/>
+                <Label x:Name="PasswordError" Margin="353,109,39,128" Content="*PASSWORDS DO NOT MATCH" BorderThickness="0"  FontFamily="Bebas Kai" FontSize="14" Foreground="Red" Visibility="Hidden"  Background="{x:Null}"/>
+                <Label x:Name="EmptyPasswordError" Margin="353,109,39,128" Content="*MUST PROVIDE PASSWORD" BorderThickness="0"  FontFamily="Bebas Kai" FontSize="14" Foreground="Red" Visibility="Hidden"  Background="{x:Null}"/>
+                <Label x:Name="NameError" Margin="353,45,39,192" Content="*MUST PROVIDE A NAME" BorderThickness="0"  FontFamily="Bebas Kai" FontSize="14" Foreground="Red" Visibility="Hidden" Background="{x:Null}"/>
             </Grid>
         </Grid>
     </Viewbox>
