--- a/CodeLingo/LoginPage.xaml
+++ b/CodeLingo/LoginPage.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LoginPage"
         mc:Ignorable="d"
-        Title="MainWindow" Height="700" Width="1250" WindowState="Maximized">
+        Title="MainWindow" Height="700" Width="1250" WindowState="Maximized" KeyDown="Window_KeyDown">
     <Viewbox>
-        <Grid>
-            <Grid Background="Black" Opacity=".5"/>
-            <Label x:Name="textBox" Height="45" Margin="148,0,149,266" Content="Welcome to CodeLingo" Width="275" FontSize="32" FontFamily="Bebas Kai" BorderThickness="0" Background="{x:Null}"/>
+        <Grid Width="526" Height="314">
+            <Grid Background="Black" Opacity=".5" Margin="-31,0,-30,0"/>
+            <Label x:Name="textBox" Height="45" Margin="148,2,103,267" Content="Welcome to CodeLingo" Width="275" FontSize="32" FontFamily="Bebas Kai" BorderThickness="0" Background="{x:Null}"/>
             <Grid x:Name="Login" Margin="6,40,-6,10">
                 <Border
             MinWidth="150"
@@ -23,7 +23,7 @@
                         <Label x:Name="Password" HorizontalAlignment="Left" Height="30" Margin="196,83,0,0" Content="Password:" VerticalAlignment="Top" Width="80" BorderThickness="0"  FontFamily="Bebas Kai" FontSize="18.667" Background="{x:Null}"/>
                         <PasswordBox x:Name="PasswordField" HorizontalAlignment="Left" Height="23" Margin="286,88,0,0" VerticalAlignment="Top" Width="150" BorderThickness="1" FontSize="16"/>
                         <Button x:Name="LoginButton" Content="Login" HorizontalAlignment="Left" Margin="286,143,0,0" VerticalAlignment="Top" Width="75" FontFamily="Bebas Kai" FontSize="16" RenderTransformOrigin="1.087,-2.778" Click="LoginButton_Click"/>
-                        <Button x:Name="RegisterButton" Content="Sign-Up" HorizontalAlignment="Left" Margin="500,-49,-23,0" VerticalAlignment="Top" Width="75" FontFamily="Bebas Kai" FontSize="16" RenderTransformOrigin="0.47,0.879" Click="RegistrationButton_Click"/>
+                        <Button x:Name="RegisterButton" Content="Sign-Up" HorizontalAlignment="Left" Margin="442,-47,-21,0" VerticalAlignment="Top" Width="75" FontFamily="Bebas Kai" FontSize="16" RenderTransformOrigin="0.47,0.879" Click="RegistrationButton_Click"/>
                         <Label x:Name="RegistrationSuccessful" Content="You have registered! Please login." HorizontalAlignment="Left" Margin="216,10,0,0" VerticalAlignment="Top" Width="220" FontFamily="Bebas Kai" FontSize="16" Foreground="Green" Visibility="Hidden"/>
 
                     </Grid>
