--- a/CodeLingo/Lesson1/Page1.xaml
+++ b/CodeLingo/Lesson1/Page1.xaml
@@ -7,15 +7,18 @@
       mc:Ignorable="d" 
        d:DesignHeight="300" d:DesignWidth="300"
       Title="Page1" Width="448" Height="208">
-    <Page.Background>
-        <SolidColorBrush Color="White" Opacity="0.5"/>
-    </Page.Background>
+
     <Grid>
-        <Label x:Name="Step1" Content="1. Download Visual Studio          . Start This now" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,19,0,0"/>
-        <TextBlock FontFamily="Bebas Kai" FontSize="16" Margin="153,24,237,169"><Hyperlink NavigateUri="https://beta.visualstudio.com/vs/community/" RequestNavigate="Hyperlink_RequestNavigate">Here</Hyperlink></TextBlock>
+        <Label x:Name="Subtitle" Content="This Lesson will cover the following: " HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="20" Margin="-1,-2,0,0" FontWeight="Bold"/>
+        <Label x:Name="Step1" Content="1. Download Visual Studio          . Start This now." HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,19,0,0"/>
+        <TextBlock FontFamily="Bebas Kai" FontSize="16" Margin="153,24,268,169"><Hyperlink NavigateUri="https://beta.visualstudio.com/vs/community/" RequestNavigate="Hyperlink_RequestNavigate"><Run Text="Here"/></Hyperlink></TextBlock>
         <Label x:Name="Warning" Content="*Ask a parent for permission and help" HorizontalAlignment="Left" Margin="10,34,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="12"/>
         <Label x:Name="Step2" Content="2. Create A Project" HorizontalAlignment="Left" Margin="0,44,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16"/>
-        <Label x:Name="Subtitle" Content="This Lesson will cover the following: " HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="20" Margin="-1,-2,0,0" FontWeight="Bold"/>
         <Label x:Name="Step3" Content="3. Main" HorizontalAlignment="Left" Margin="0,58,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16"/>
+        <Label x:Name="Step4" Content="4. File Types" HorizontalAlignment="Left" Margin="0,72,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16"/>
+        <Label x:Name="Step5" Content="5. Libraries" HorizontalAlignment="Left" Margin="0,86,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16"/>
+        <Label x:Name="Step6" Content="6. Adding Files to Projects" HorizontalAlignment="Left" Margin="0,100,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16"/>
+        <Label x:Name="Step7" Content="7. Comments" HorizontalAlignment="Left" Margin="2,113,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16"/>
+        <Label x:Name="Step8" Content="8. Tutorial - Hello World!" HorizontalAlignment="Left" Margin="1,127,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16"/>
     </Grid>
 </Page>
