--- a/CodeLingo/Lesson1/Page3.xaml
+++ b/CodeLingo/Lesson1/Page3.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="CodeLingo.Lesson1.Page2"
+﻿<Page x:Class="CodeLingo.Lesson1.Page3"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,13 +6,12 @@
       xmlns:local="clr-namespace:CodeLingo.Lesson1"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
-      Title="Page2" Width="448" Height="208">
+      Title="Page3" Width="448" Height="208">
+    <Page.Background>
+        <SolidColorBrush Color="White" Opacity="0.5"/>
+    </Page.Background>
 
     <Grid>
         <Label x:Name="Subtitle" Content="Downloading Visual Studio" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="20" Margin="-1,-2,0,0" FontWeight="Bold"/>
-        <TextBlock x:Name="Information" HorizontalAlignment="Left" Margin="6,31,0,0" TextWrapping="Wrap" 
-                   Text="Follow the download wizard instructions. You can choose to get as many extra features as you wish, but the default will be enough. When the download is complete, run Visual Studio and go to the next step." 
-                   VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16
-                   " Width="360"/>
     </Grid>
 </Page>
