--- a/CodeLingo/Lesson1/Page3.xaml
+++ b/CodeLingo/Lesson1/Page3.xaml
@@ -7,11 +7,13 @@
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
       Title="Page3" Width="448" Height="208">
-    <Page.Background>
-        <SolidColorBrush Color="White" Opacity="0.5"/>
-    </Page.Background>
+
 
     <Grid>
-        <Label x:Name="Subtitle" Content="Downloading Visual Studio" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="20" Margin="-1,-2,0,0" FontWeight="Bold"/>
+        <Image x:Name="image1" Source="C:\Users\Coryna\Documents\Visual Studio 2015\Projects\CodeLingo\CodeLingo\new_project.png" HorizontalAlignment="Left" Height="202" Margin="36,88,5,15" VerticalAlignment="Top" Width="500" Panel.ZIndex="-1"/>
+        <Label x:Name="Subtitle" Content="Create a Project" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="20" Margin="-1,-2,0,0" FontWeight="Bold"/>
+        <TextBlock x:Name="Information" Text="A project is going to be the place we write our code. To make a new project:" HorizontalAlignment="Left" Margin="5,25,0,0" VerticalAlignment="Top"  FontFamily="Bebas Kai" FontSize="16" Width="373" Height="51" TextWrapping="Wrap"/>
+        <Label x:Name="Step1" Content="File -&gt; New -&gt; Project" HorizontalAlignment="Left" Margin="116,39,0,0" VerticalAlignment="Top" RenderTransformOrigin="-1.316,-0.962" FontFamily="Bebas Kai" FontSize="16" Foreground="#FF040447"/>
+        <Label x:Name="Step2" Content="Choose the Visual C++ Template and Win32 Console Application" HorizontalAlignment="Left" Margin="1,65,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16"/>
     </Grid>
 </Page>
