--- a/CodeLingo/Lesson1/Page9.xaml
+++ b/CodeLingo/Lesson1/Page9.xaml
@@ -10,6 +10,6 @@
 
     <Grid>
         <Label x:Name="Subtitle" Content="Include and using statements" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="20" Margin="-1,-2,0,0" FontWeight="Bold"/>
-        <TextBlock x:Name="Include" HorizontalAlignment="Left" TextWrapping="Wrap" Text="The 'include' and 'using' statements let Visual Studio which libraries you'd like to use. These libraries can have very helpful tools for making a program. Math equations, displaying text, making buttons, these can all be added to a project by using the libraries for them. We need to use the iostream library because it allows us to output our text 'hello world' to the screen. the 'using' statement for letting Visual Studio know we want to output text to the screen." VerticalAlignment="Top" Margin="4,26,0,0" FontFamily="Bebas Kai" FontSize="16" Width="421"/>
+        <TextBlock x:Name="Include" HorizontalAlignment="Left" TextWrapping="Wrap" Text="The 'include' and 'using' statements let Visual Studio know which libraries you'd like to use. These libraries can have very helpful tools for making a program. Math equations, displaying text, making buttons, these can all be added to a project by using the libraries for them. We need to use the iostream library because it allows us to output our text 'hello world' to the screen. In our project, the 'using' statement is for letting Visual Studio know we want to output text to the screen." VerticalAlignment="Top" Margin="4,26,0,0" FontFamily="Bebas Kai" FontSize="16" Width="421"/>
     </Grid>
 </Page>
