--- a/CodeLingo/LandingPage.xaml
+++ b/CodeLingo/LandingPage.xaml
@@ -9,7 +9,9 @@
     <Viewbox>
 
         <Grid>
-            <Grid Background="Black" Opacity=".5" Margin="-179,0,-180,0" HorizontalAlignment="Left" Width="603"/>
+            <Grid Background="Black" Opacity=".5" Margin="-179,0,-180,0" HorizontalAlignment="Left" Width="603">
+            </Grid>
+            <Button x:Name="Logout" Content="Logout" HorizontalAlignment="Left" Margin="-145,4,0,0" VerticalAlignment="Top" Height="21" Width="76" FontFamily="Bebas Kai" FontSize="16" Click="Logout_Click"/>
             <Label x:Name="LandingTitle" Height="45" Margin="-70,4,-70,262" Content="Welcome " Width="384" FontSize="32" FontFamily="Bebas Kai" BorderThickness="0" Background="{x:Null}" HorizontalContentAlignment="Center"/>
             <Grid x:Name="LeftContent" Background="LightBlue" Margin="-150,49,150,15"/>
             <Grid x:Name="RightContent" Background="LightBlue" Margin="150,49,-150,15">
@@ -17,6 +19,7 @@
                 <Button x:Name="Lesson1Button" Content="GO" HorizontalAlignment="Left" VerticalAlignment="Top" Width="19" FontFamily="Bebas Kai" FontSize="16" RenderTransformOrigin="1.087,-2.778" Click="lesson_button_Click" Margin="89,10,0,0" Height="21" Uid="1"/>
                 <Label x:Name="Lesson2" HorizontalAlignment="Left" Height="30" Margin="11,28,0,0" Content="Lesson 2" VerticalAlignment="Top" Width="80" BorderThickness="0"  FontFamily="Bebas Kai" FontSize="18.667" Background="{x:Null}" RenderTransformOrigin="1.414,0.829"/>
                 <Button x:Name="Lesson2Button" Content="GO" HorizontalAlignment="Left" VerticalAlignment="Top" Width="19" FontFamily="Bebas Kai" FontSize="16" RenderTransformOrigin="1.087,-2.778" Click="lesson_button_Click" Margin="89,33,0,0" Height="21" Uid="2"/>
+                <Button x:Name="Quiz2Button" Content="Take Quizzes" HorizontalAlignment="Left" Margin="113,33,0,0" VerticalAlignment="Top" Height="21" Width="76" FontFamily="Bebas Kai" FontSize="16" Click="Quiz_Button_Click" Visibility="Hidden" Uid="2"/>
             </Grid>
         </Grid>
 
