--- a/CodeLingo/Quiz2/Page1.xaml
+++ b/CodeLingo/Quiz2/Page1.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="CodeLingo.Lesson2.Page1"
+﻿<Page x:Class="CodeLingo.Quiz2.Page1"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:CodeLingo.Lesson2"
+      xmlns:local="clr-namespace:CodeLingo.Quiz2"
       mc:Ignorable="d" 
        d:DesignHeight="300" d:DesignWidth="300"
       Title="Page1" Width="448" Height="208">
@@ -13,8 +13,8 @@
 
     <Grid>
         <Label x:Name="Subtitle" Content="1. Pseudocode is one of the 7 steps of debugging" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontFamily="Bebas Kai" FontSize="20" Margin="-1,-2,0,176" FontWeight="Bold"/>
-        <RadioButton x:Name="True" Content="True" HorizontalAlignment="Left" Margin="3,32,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16"/>
-        <RadioButton x:Name="False" Content="False" HorizontalAlignment="Left" Margin="3,48,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16"/>
+        <RadioButton x:Name="True" Content="True" HorizontalAlignment="Left" Margin="3,32,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Checked = "HandleCheck"/>
+        <RadioButton x:Name="False" Content="False" HorizontalAlignment="Left" Margin="3,48,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Checked = "HandleCheck"/>
         <!--<TextBlock x:Name="True" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Margin="4,26,10,0"  FontFamily="Bebas Kai" FontSize="16"/>-->
 
     </Grid>
