--- a/CodeLingo/Quiz3/Page9.xaml
+++ b/CodeLingo/Quiz3/Page9.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="CodeLingo.Quiz3.Page8"
+﻿<Page x:Class="CodeLingo.Quiz3.Page9"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,13 +6,13 @@
       xmlns:local="clr-namespace:CodeLingo.Quiz3"
       mc:Ignorable="d" 
        d:DesignHeight="300" d:DesignWidth="300"
-      Title="Page8" Width="448" Height="208">
-
-
+      Title="Page9" Width="448" Height="208">
+    <Page.Background>
+        <SolidColorBrush Color="#FF7A7A7A" Opacity="0.75"/>
+    </Page.Background>
     <Grid>
-        <Label x:Name="Subtitle" Content="8. Is the following code correct?" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontFamily="Bebas Kai" FontSize="20" Margin="-1,-2,0,176" FontWeight="Bold"/>
+        <Label x:Name="Subtitle" Content="9. Is the following code correct?" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontFamily="Bebas Kai" FontSize="20" Margin="-1,-2,0,176" FontWeight="Bold"/>
         <TextBlock x:Name="main" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontSize="18" Margin="100,0,0,78" FontWeight="Bold" Foreground="DarkBlue" Height="106" Width="105" ><Run Text="int main ( )"/><LineBreak/><Run Text="{}{"/><LineBreak/><Run Text="     return 0;"/><LineBreak/><Run Text="}"/></TextBlock>
-        <RadioButton x:Name="True" Content="Yes" HorizontalAlignment="Left" Margin="10,44,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Checked = "HandleCheck"/>
-        <RadioButton x:Name="False" Content="No" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Checked = "HandleCheck"/>
+
     </Grid>
 </Page>
