--- a/CodeLingo/Quiz3/Page10.xaml
+++ b/CodeLingo/Quiz3/Page10.xaml
@@ -7,19 +7,11 @@
       mc:Ignorable="d" 
        d:DesignHeight="300" d:DesignWidth="300"
       Title="Page10" Width="448" Height="208">
-    <!--<Page.Background>
-        <SolidColorBrush Color="#FF7A7A7A" Opacity="0.75"/>
-    </Page.Background>-->
+
     <Grid>
-        <!--<Label Name="Label" Content="" AllowDrop="True"  Drop="Drop1_Drop" Height="25" Width="25" Background="White" Canvas.Left="65" Canvas.Top="50" Margin="190,74,233,109"></Label>-->
-        <Label Name="Content1" Content="A" Height="25" Width="25" Background="White" Canvas.Left="315" Canvas.Top="50" MouseDown="Label_MouseDown" MouseUp="Label_MouseUp" Margin="305,74,118,109" ></Label>
+        <Label x:Name="Subtitle" Content="10. Is the following code correct?" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontFamily="Bebas Kai" FontSize="20" Margin="-1,-2,0,176" FontWeight="Bold"/>
+        <Label x:Name="main" Content="#include &lt;iostream&gt;;" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontSize="18" Margin="80,0,0,154" FontWeight="Bold" Foreground="DarkBlue"/>
+        <RadioButton x:Name="True" Content="Yes" HorizontalAlignment="Left" Margin="10,44,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Checked = "HandleCheck"/>
+        <RadioButton x:Name="False" Content="No" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Checked = "HandleCheck"/>
     </Grid>
-    <!--<Canvas>
-        <Ellipse Name="greenie" Height="50" Width="50" Fill="Green" 
-         AllowDrop="True" 
-         Drop="ellipse_Drop" 
-         Canvas.Left="195" 
-         Canvas.Top="143" />
-        <TextBox Background="Azure" Height="50" Width="50" Text="Blue"/>
-    </Canvas>-->
 </Page>
