--- a/CodeLingo/Lesson1/Page1.xaml
+++ b/CodeLingo/Lesson1/Page1.xaml
@@ -14,11 +14,10 @@
         <Label x:Name="Step1" Content="1. Download Visual Studio          . Start This now." HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,19,0,0"/>
         <TextBlock FontFamily="Bebas Kai" FontSize="16" Margin="153,24,255,150"><Hyperlink NavigateUri="https://beta.visualstudio.com/vs/community/" RequestNavigate="Hyperlink_RequestNavigate" BaselineAlignment="Bottom"><Run Text="Here"/></Hyperlink></TextBlock>
         <Label x:Name="Step2" Content="2. Create A Project" HorizontalAlignment="Left" Margin="0,44,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16"/>
-        <Label x:Name="Step3" Content="3. Main" HorizontalAlignment="Left" Margin="0,58,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16"/>
+        <Label x:Name="Step3" Content="3. Main (an overview)" HorizontalAlignment="Left" Margin="0,58,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16"/>
         <Label x:Name="Step4" Content="4. File Types" HorizontalAlignment="Left" Margin="0,72,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16"/>
         <Label x:Name="Step5" Content="5. Libraries" HorizontalAlignment="Left" Margin="0,86,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16"/>
         <Label x:Name="Step6" Content="6. Adding Files to Projects" HorizontalAlignment="Left" Margin="0,100,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16"/>
-        <Label x:Name="Step7" Content="7. Comments" HorizontalAlignment="Left" Margin="2,113,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16"/>
-        <Label x:Name="Step8" Content="8. Tutorial - Hello World!" HorizontalAlignment="Left" Margin="1,127,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16"/>
+        <Label x:Name="Step8" Content="7. Tutorial - Hello World!" HorizontalAlignment="Left" Margin="2,114,0,0" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16"/>
     </Grid>
 </Page>
