--- a/CodeLingo/Lesson2/Page1.xaml
+++ b/CodeLingo/Lesson2/Page1.xaml
@@ -7,11 +7,11 @@
       mc:Ignorable="d" 
        d:DesignHeight="300" d:DesignWidth="300"
       Title="Page1" Width="448" Height="208">
-    <Page.Background>
-        <SolidColorBrush Color="#FF7A7A7A" Opacity="0.75"/>
-    </Page.Background>
 
     <Grid>
-
-    </Grid>
+        <Label x:Name="Subtitle" Content="This Lesson will cover the following: " HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="20" Margin="-1,-2,0,0" FontWeight="Bold"/>
+        <Label x:Name="Step1" Content="1. Definition of a program" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,19,0,0"/>
+        <Label x:Name="Step2" Content="2. The 7 steps of debugging" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,37,0,0"/>
+        <Label x:Name="Step3" Content="3. Pseudocode" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,53,0,0"/>
+          </Grid>
 </Page>
