--- a/CodeLingo/Lesson3/Page1.xaml
+++ b/CodeLingo/Lesson3/Page1.xaml
@@ -7,11 +7,14 @@
       mc:Ignorable="d" 
        d:DesignHeight="300" d:DesignWidth="300"
       Title="Page1" Width="448" Height="208">
-    <Page.Background>
-        <SolidColorBrush Color="#FF7A7A7A" Opacity="0.75"/>
-    </Page.Background>
+
 
     <Grid>
-        
+        <Label x:Name="Subtitle" Content="This Lesson will cover the following: " HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="20" Margin="-1,-2,0,0" FontWeight="Bold"/>
+        <Label x:Name="Step1" Content="1. Whitespace and readability" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,19,0,0"/>
+        <Label x:Name="Step2" Content="2. Comments" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,37,0,0"/>
+        <Label x:Name="Step3" Content="3. Main (in depth)" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,53,0,0"/>
+        <Label x:Name="Step4" Content="4. Include statements" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="-1,70,0,0"/>
+        <Label x:Name="Step5" Content="5. Using statements" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="16" Margin="0,87,0,0"/>
     </Grid>
 </Page>
