--- a/CodeLingo/LandingPage.xaml
+++ b/CodeLingo/LandingPage.xaml
@@ -13,7 +13,9 @@
             </Grid>
             <Button x:Name="Logout" Content="Logout" HorizontalAlignment="Left" Margin="-145,4,0,0" VerticalAlignment="Top" Height="21" Width="76" FontFamily="Bebas Kai" FontSize="16" Click="Logout_Click"/>
             <Label x:Name="LandingTitle" Height="45" Margin="-70,4,-70,262" Content="Welcome " Width="384" FontSize="32" FontFamily="Bebas Kai" BorderThickness="0" Background="{x:Null}" HorizontalContentAlignment="Center"/>
-            <Grid x:Name="LeftContent" Background="LightBlue" Margin="-150,49,150,15"/>
+            <Grid x:Name="LeftContent" Background="LightBlue" Margin="-150,49,150,15">
+                <!--<ScrollViewer />-->
+            </Grid>
             <Grid x:Name="RightContent" Background="LightBlue" Margin="150,49,-150,15">
                 <Label x:Name="Lesson" HorizontalAlignment="Left" Height="30" Margin="11,2,0,0" Content="Lesson 1" VerticalAlignment="Top" Width="80" BorderThickness="0"  FontFamily="Bebas Kai" FontSize="18.667" Background="{x:Null}" RenderTransformOrigin="1.414,0.829"/>
                 <Button x:Name="Lesson1Button" Content="GO" HorizontalAlignment="Left" VerticalAlignment="Top" Width="19" FontFamily="Bebas Kai" FontSize="16" RenderTransformOrigin="1.087,-2.778" Click="lesson_button_Click" Margin="89,7,0,0" Height="21" Uid="1"/>
