--- a/CodeLingo/Lesson7/Page8.xaml
+++ b/CodeLingo/Lesson7/Page8.xaml
@@ -5,10 +5,13 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CodeLingo.Lesson7"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
-      Title="Page8">
+        d:DesignHeight="300" d:DesignWidth="300"
+      Title="Page8" Width="448" Height="208">
 
     <Grid>
-        
+        <Label x:Name="Subtitle" Content="Logical Operators" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bebas Kai" FontSize="20" Margin="-1,-2,0,0" FontWeight="Bold"/>
+        <TextBlock x:Name="Paragraph" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Margin="4,27,0,0" FontFamily="Bebas Kai" FontSize="16" Width="421"><Run Text="When there is more than one logical operator of the same level of precedence, they are evaluated left to right. Parentheses can be used to change the precedence and also clarify and simplify any complicated conditions. "/><LineBreak/><Run/><LineBreak/><Run Text="Short-circuit evaluation is when an outcome of the condition can be determined, it terminates. For an &amp;&amp; expression, if the first part is false, there is no need to proceed because the result must be false as stated in our truth table."/></TextBlock>
+
+
     </Grid>
 </Page>
